# SimpleStudentRecordSystem

./: CMakeLists.txt  main.cpp
input/: coursesDefault.csv  default.csv
src/: Course.cpp  Course.h  DoubleLinkedList.h  DoubleNode.cpp  DoubleNode.h  Person.cpp  Person.h  RecordManager.cpp  RecordManager.h  Records.cpp  Records.h  SingleLinkedList.cpp  SingleLinkedList.h  SingleNode.cpp  SingleNode.h  Student.cpp  Student.h  main.cpp
test/: CourseTest.cpp
uml/: ClassDiagram.puml
